--- a/index.html
+++ b/index.html
@@ -8,24 +8,31 @@
 <body>
     <div class="header">
         <div class="media-split">
-            <h2 class="title">Header Logo</h2>
+            <p>Header Logo</p>
             <div class="headerLinks">
                 <a href="">header link one</a>
                 <a href="">header link two</a>
                 <a href="">header link three</a>
             </div>
         </div>
-        <div class="info">
-            <h2></h2>
+    </div>
+    <div class="description">
+        <div class="content">
+            <h2>This website is awesome</h2>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button>Sign Up</button>
         </div>
-        <div class="quote">
-
-        </div>
-        <div class="banner">
-
+        <div class="img">
+            <p>This is a placeholder for an image</p>
         </div>
     </div>
-    <div class="content">
+    <div class="info">
+
+    </div>
+    <div class="quote">
+
+    </div>
+    <div class="banner">
 
     </div>
     <div class="footer">
