--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Website</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;0,900;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="header">
-        <div class="media-split">
-            <p>Header Logo</p>
-            <div class="headerLinks">
-                <a href="">header link one</a>
-                <a href="">header link two</a>
-                <a href="">header link three</a>
-            </div>
+    <div class="header black-bkg">
+        <p>Header Logo</p>
+        <div class="headerLinks">
+            <a href="">header link one</a>
+            <a href="">header link two</a>
+            <a href="">header link three</a>
         </div>
     </div>
-    <div class="description">
-        <div class="content">
+    <div class="content black-bkg">
+        <div class="text">
             <h2>This website is awesome</h2>
             <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
             <button>Sign Up</button>
@@ -27,16 +29,37 @@
         </div>
     </div>
     <div class="info">
-
+        <h2>Some random information.</h2>
+        <div class="info-block">
+            <div></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="info-block">
+            <div></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="info-block">
+            <div></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="info-block">
+            <div></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
     </div>
     <div class="quote">
-
+        <h2>This is an inspiring quote, or a testimonial from a customer. Maybe its just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice</h2>
+        <p>-Thor, God of Thunder</p>
     </div>
     <div class="banner">
-
+        <div class="banner-text">
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button>Sign up</button>
     </div>
-    <div class="footer">
-
+    <div class="footer black-bkg">
+        <p>Copyright @ The Odin Project 2021</p>
     </div>
 </body>
 </html>
