--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p>This is a placeholder for an image</p>
         </div>
     </div>
-    <div class="info">
+    <div class="content">
         <h2>Some random information.</h2>
         <div class="info-block">
             <div></div>
@@ -47,11 +47,11 @@
             <p>this is some subtext under an illustration or image</p>
         </div>
     </div>
-    <div class="quote">
+    <div class="content">
         <h2>This is an inspiring quote, or a testimonial from a customer. Maybe its just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice</h2>
         <p>-Thor, God of Thunder</p>
     </div>
-    <div class="banner">
+    <div class="content">
         <div class="banner-text">
             <h3>Call to action! It's time!</h3>
             <p>Sign up for our product by clicking that button right over there!</p>
