--- a/index.html
+++ b/index.html
@@ -18,43 +18,45 @@
             <a href="">header link three</a>
         </div>
     </div>
-    <div class="welcome black-bkg">
-        <div class="welcome-text">
-            <h2>This website is awesome</h2>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button>Sign Up</button>
+    <div class="content">
+        <div class="welcome black-bkg">
+            <div class="welcome-text">
+                <h2>This website is awesome</h2>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button>Sign Up</button>
+            </div>
+            <div class="img"><p>This is a placeholder for an image</p></div>
         </div>
-        <div class="img"><p>This is a placeholder for an image</p></div>
-    </div>
-    <div class="info">
-        <h2>Some random information.</h2>
-        <div class="info-block">
-            <div></div>
-            <p>this is some subtext under an illustration or image</p>
+        <div class="info">
+            <h2>Some random information.</h2>
+            <div class="info-block">
+                <div></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-block">
+                <div></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-block">
+                <div></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-block">
+                <div></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
         </div>
-        <div class="info-block">
-            <div></div>
-            <p>this is some subtext under an illustration or image</p>
+        <div class="quote">
+            <h2>This is an inspiring quote, or a testimonial from a customer. Maybe its just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice</h2>
+            <p>-Thor, God of Thunder</p>
         </div>
-        <div class="info-block">
-            <div></div>
-            <p>this is some subtext under an illustration or image</p>
+        <div class="banner">
+            <div class="banner-text">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign up</button>
         </div>
-        <div class="info-block">
-            <div></div>
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-    </div>
-    <div class="quote">
-        <h2>This is an inspiring quote, or a testimonial from a customer. Maybe its just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice</h2>
-        <p>-Thor, God of Thunder</p>
-    </div>
-    <div class="banner">
-        <div class="banner-text">
-            <h3>Call to action! It's time!</h3>
-            <p>Sign up for our product by clicking that button right over there!</p>
-        </div>
-        <button>Sign up</button>
     </div>
     <div class="footer black-bkg">
         <p>Copyright @ The Odin Project 2021</p>
