--- a/index.html
+++ b/index.html
@@ -1,62 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="./style.css">
   <title>Odin Website</title>
 </head>
 <body>
-  <div>
-		<div>
-			<p>Header Logo</p>
+	<div class="teal-bkg header-section">
+		<div class="header-bar">
+			<p class="bold">Header Logo</p>
 			<div>
-				<a href="">header link one</a>
-				<a href="">header link two</a>
-				<a href="">header link three</a>
+				<a href="" class="light">header link one</a>
+				<a href="" class="light">header link two</a>
+				<a href="" class="light">header link three</a>
 			</div>
 		</div>
 		<div>
-			<p>This website is awesome</p>
-			<p>The website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-			<button>Sign up</button>
-		</div>
-		<div>
-			<p>Some random information</p>
+			<div class="welcome-section">
+				<h2 class="bold">This website is awesome</h2>
+				<p class="light">The website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+				<button class="bold">Sign up</button>
+			</div>
 			<div>
-				<div>
-					<div></div>
-					<p>this is some subtext under an illustration or image</p>
-				</div>
-				<div>
-					<div></div>
-					<p>this is some subtext under an illustration or image</p>
-				</div>
-				<div>
-					<div></div>
-					<p>this is some subtext under an illustration or image</p>
-				</div>
-				<div>
-					<div></div>
-					<p>this is some subtext under an illustration or image</p>
-				</div>
+				<p class="light">This is a placeholder for an image</p>
 			</div>
 		</div>
+	</div>
+	<div class="info-section">
+		<p>Some random information</p>
 		<div>
-			<p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-			<p>-Thor, God of Thunder</p>
-		</div>
-		<div>
-			<div>
-				<div>
-					<p>Call to action! It's time!</p>
-					<p>Sign up for our product by clicking that button right over there!</p>
-				</div>
-				<button>Sign up</button>
+			<div class="info-box">
+				<div></div>
+				<p class="light">this is some subtext under an illustration or image</p>
+			</div>
+			<div class="info-box">
+				<div></div>
+				<p class="light">this is some subtext under an illustration or image</p>
+			</div>
+			<div class="info-box">
+				<div></div>
+				<p class="light">this is some subtext under an illustration or image</p>
+			</div>
+			<div class="info-box">
+				<div></div>
+				<p class="light">this is some subtext under an illustration or image</p>
 			</div>
 		</div>
+	</div>
+	<div class="quote-section">
+		<p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+		<p>-Thor, God of Thunder</p>
+	</div>
+	<div class="banner-section">
 		<div>
-			<p>Copyright @ The Odin Project 2021</p>
+			<div>
+				<p>Call to action! It's time!</p>
+				<p class="light">Sign up for our product by clicking that button right over there!</p>
+			</div>
+			<button class="bold">Sign up</button>
 		</div>
+	</div>
+	<div class="teal-bkg footer-section">
+		<p class="light">Copyright @ The Odin Project 2021</p>
 	</div>
 </body>
 </html>
