aligned the header and gave styling to top
positioning elements similar to the target website

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div class="teal-bkg header-section">
-		<div class="header-bar">
+		<div class="header-col">
 			<p class="bold">Header Logo</p>
 			<div>
 				<a href="" class="light">header link one</a>
@@ -19,8 +19,8 @@
 				<a href="" class="light">header link three</a>
 			</div>
 		</div>
-		<div>
-			<div class="welcome-section">
+		<div class="intro-col">
+			<div>
 				<h2 class="bold">This website is awesome</h2>
 				<p class="light">The website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
 				<button class="bold">Sign up</button>
